buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id "org.jetbrains.intellij" version "0.4.26"
}

apply plugin: 'java'
apply plugin: 'idea'

sourceCompatibility = "11"
targetCompatibility = "11"

idea {
    project {
        jdkName = "11"
        languageLevel = "11"
    }
}


tasks.withType(JavaCompile) { options.encoding = 'UTF-8' }

repositories {
    mavenCentral()

    maven {
        url "https://maven.consulo.io/repository/snapshots"
    }
}

runIde {
    minHeapSize = "512m";
    maxHeapSize = "1G";

    //jvmArgs '-Dsun.java2d.uiScale.enabled=true'
    //jvmArgs "-agentpath:C:/yjpagent.dll"
    jvmArgs "-Didea.ProcessCanceledException=disabled"
}

intellij {
    type 'IC'
    version 'LATEST-EAP-SNAPSHOT'
    downloadSources true
    updateSinceUntilBuild = false

    plugins = ['org.jetbrains.kotlin', 'com.intellij.java']
}

dependencies {
    compile group: 'consulo.internal.com.squareup', name: 'javapoet', version: '1.14.0-SNAPSHOT'
}